tests/idris2/coverage/impossible008/expected
1/1: Building Main (Main.idr)
Error: bar is not covering.

Main:14:1--14:52
 10 | data IsMaybe : Maybe a -> Type where
 11 |   IsJust : IsMaybe (Just x)
 12 |   IsNothing : IsMaybe Nothing
 13 | 
 14 | bar : (m : Maybe Void) -> (0 _ : IsMaybe m) -> Void
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Missing cases:
    bar Nothing _

Error: foo is not covering.

Main:5:1--6:40
 5 | total
 6 | foo : (b : Bool) -> (0 _ : X b) -> Void

Missing cases:
    foo False _

